# lightdash-ops

./: .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  Makefile  README.md  mypy.ini  pyproject.toml  requirements.setup.txt
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  publish.yml  test-publish.yml  test.yml
dev/: build.sh  lint.sh  lint_python.sh  setup.sh  test_python.sh  update_resources.sh
docs/: cli.md
lightdash_ops/: __init__.py  utils.py
lightdash_ops/cli/: exposures.py  main.py  organization_v1.py  project.py  project_v1.py  settings.py
lightdash_ops/lightdash/: client.py  organization.py  project.py  settings.py  space.py  user_group.py
lightdash_ops/lightdash/models/: organization.py  project.py  project_member.py  space.py  user_group.py
lightdash_ops/lightdash/services/: get_organization_members.py
lightdash_ops/lightdash/v1/: __init__.py  client.py  create_space_in_project.py  get_authenticated_user.py  get_dbt_exposures.py  get_explore.py  get_explores.py  get_my_organization.py  get_organization_member_by_uuid.py  get_project.py.py  get_space.py  list_groups_in_organization.py  list_organization_members.py  list_organization_projects.py  list_spaces_in_project.py
lightdash_ops/models/: base_user.py  exposure.py  organization.py  project.py  project_member.py  settings.py  space.py  user_group.py
lightdash_ops/operators/: exposures_v1.py  organization_v1.py  project_v1.py
lightdash_ops/tests/: test_utils.py  utils.py
lightdash_ops/tests/lightdash/: test_get_authenticated_user.py  test_get_explore.py  test_get_explores.py  test_get_my_organization.py  test_get_organization_member_by_uuid.py  test_get_project.py  test_list_groups_in_organization.py  test_list_organization_members.py  test_list_spaces_in_project.py  test_organization.py  test_project.py  test_settings.py
lightdash_ops/tests/models/: test_lightdash_user.py  test_manager_settings.py  test_project_member.py  test_space.py  test_user_group.py
lightdash_ops/tests/resources/: test-organization-config-v1.yml  test-project-config-v1.yml  test-user-group-config-v1.yml
(+12 files in other folders)
